fixed lights screen, wrap text with real measurements, lines, moved settings to layoutData

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
     margin: 0px auto;
     box-sizing: border-box;
     color: white;
-    font-family: 'Roboto Slab', serif;
 }
 
 
